--- a/src/app/gifs/busqueda/busqueda.component.html
+++ b/src/app/gifs/busqueda/busqueda.component.html
@@ -1,5 +1,11 @@
 <div class="row">
   <div class="col">
-    <input type="text" class="form-control mt-3 mb-3" placeholder="Buscar...">
+    <input
+      type="text"
+      class="form-control mt-3 mb-3"
+      placeholder="Buscar..."
+      (keyup.enter)="search()"
+      #txtSearch
+    />
   </div>
 </div>
