--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,10 +9,10 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-3">
+      <div class="col-12 col-md-3">
         <app-sidebar></app-sidebar>
       </div>
-      <div class="col-7">
+      <div class="col-12 col-md-7">
         <app-gifs-page></app-gifs-page>
       </div>
     </div>
