--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,7 +1,12 @@
 <h2 class="mt-3">GiftsApp</h2>
-<hr>
-<ul>
-  <li>1</li>
-  <li>2</li>
-  <li>3</li>
+<hr />
+<ul class="list-group">
+  <a
+    style="cursor: pointer"
+    class="list-group-item"
+    *ngFor="let item of history; let i = index"
+    (click)="search(item)"
+  >
+    [{{ i + 1 }}] {{ item | titlecase }}
+  </a>
 </ul>
